Update examples notebook

--- a/monitoring/monitoring-examples.ipynb
+++ b/monitoring/monitoring-examples.ipynb
@@ -51,6 +51,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "541a5e20-3c46-4b31-a713-a3dcca259789",
+   "metadata": {},
+   "source": [
+    "#### O teste de Kolmogorov-Smirnov considerando duas amostras tem por objetivo determinar a distância entre elas para que, a partir de um nível de significância, possam ser ditas de distribuições diferentes ou não. Na maioria das aplicações práticas, esse nível de significância é dado $\\alpha = 0.05$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93d00da9-bc44-4082-a556-c011f488eed4",
+   "metadata": {},
+   "source": [
+    "Para chegarmos a alguma conclusão, assumimos uma hipótese nula que consiste em dizer que ambas as amostras pertencem a uma mesma distribuição."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff0ebd39-31da-4aa3-87d3-8fea01502131",
+   "metadata": {},
+   "source": [
+    "Assim, utilizando <em><strong>scipy.stats.ks_2samp(score_req, score_test)</strong></em> estamos considerando como hipótese nula o fato de que os scores determinados pelo modelo para os dois datasets vêm da mesma distribuição. Isso implica, portanto, que os datasets viriam de uma mesma distribuição de dados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6b2c195-68ba-49a5-98a8-10ab272d1ca7",
+   "metadata": {},
+   "source": [
+    "Dessa maneira, ao calcular as métricas do teste KS, compararemos <em><strong>p-value</strong></em> com <em><strong>$\\alpha$</strong></em> para rejeitar ou não a hipótese nula.\n",
+    "\n",
+    "<li>Se <em><strong>p-value</strong></em> $ > \\alpha$, não rejeitamos a hipótese nula e as amostras vêm de uma mesma distribuição</li>\n",
+    "<li>Se <em><strong>p-value</strong></em> $ <= \\alpha$, rejeitamos a hipótese nula e as amostras não vêm de uma mesma distribuição</li>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8afe493-48bb-4130-97de-b6582807ab8d",
+   "metadata": {},
+   "source": [
+    "O teste KS utiliza a métrica <em><strong>statistic</strong></em> para definir o <em><strong>p-value</strong></em>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7911fa86-2bd0-4e55-a5fa-d15ed30c77ab",
    "metadata": {},
    "source": [
@@ -88,7 +131,7 @@
    "id": "d04a4cab-2411-4c61-8217-aac853447e2e",
    "metadata": {},
    "source": [
-    "Nesse caso, percebe-se que o <em><strong>p-value</strong></em> está na ordem de $10^{-12}$, o que, de acordo com o teste KS, indica que as duas amostras não vêm da mesma distribuição considerando um alfa = 0.05."
+    "Nesse caso, percebe-se que o <em><strong>p-value</strong></em> está na ordem de $10^{-12}$, o que, de acordo com o teste KS, indica que as duas amostras não vêm da mesma distribuição considerando um $\\alpha = 0.05$."
    ]
   },
   {
@@ -153,7 +196,7 @@
    "id": "744601bd-cde8-4742-83cf-5f47d2b17f74",
    "metadata": {},
    "source": [
-    "Para a base de treino, percebe-se um <em><strong>p-value</strong></em> da ordem de $10^{-1}$, o que, de acordo com o teste KS, indica que as duas amostras são da mesma distribuição de dados considerando um alfa = 0.05."
+    "Para a base de treino, percebe-se um <em><strong>p-value</strong></em> da ordem de $10^{-1}$, o que, de acordo com o teste KS, indica que as duas amostras são da mesma distribuição de dados considerando um $\\alpha = 0.05$."
    ]
   },
   {
